fixed overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@ body {
   margin: auto;
 }
 
-
 .search-stock-card {
   position: sticky;
   top: 0;
@@ -87,27 +86,27 @@ body {
   box-sizing: content-box;
 }
 
-@media screen and (min-width: 305px) and (max-width: 405px) {
-
+@media screen and (min-width: 305px) and (max-width: 905px) {
   .app {
-    font-size: .8em;
+    font-size: 0.8em;
     overflow-x: hidden;
     display: flex;
     width: 100vw;
     justify-content: center;
     flex-direction: column;
   }
-  .the-title{
-    font-size: 18px;
+  .the-title {
+    font-size: 20px;
   }
   .ticker-container {
-    height: 7em;
+    height: 80px;
     padding-left: 90%;
     box-sizing: content-box;
     overflow-x: hidden;
   }
   .stock-sector-news {
     width: 100vw;
+    flex-direction: column;
     align-items: column;
     margin: auto;
   }
@@ -118,30 +117,27 @@ body {
     text-align: center;
   }
 
-.date-time {
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-weight: bold;
-  color: white;
-  margin-bottom: 5%;
-}
-.the-time {
-  height: 50px;
-  font-size: 20px;
-  margin-bottom: 80px;
-  text-align: center;
-  margin: 0px;
-  color: white;
-}
-.date {
-  font-size: 20px;
-  color: white;
-  text-align: center;
-}
-.title-date {
-  width: 80%;
-  margin: auto;
-}
-.the-title {
-}
+  .date-time {
+    text-align: center;
+    margin-bottom: 5%;
+  }
+  .the-time {
+    height: 50px;
+    font-size: 18px;
+    margin-bottom: 80px;
+    text-align: center;
+    margin: 0px;
+    color: white;
+  }
+  .date {
+    font-size: 18px;
+    color: white;
+    text-align: center;
+  }
+  .title-date {
+    width: 80%;
+    margin: auto;
+  }
+  .the-title {
+  }
 }
