--- a/src/styleSheets/SectorCard.css
+++ b/src/styleSheets/SectorCard.css
@@ -38,9 +38,21 @@
   font-weight: bold;
   text-shadow: 0 0 1px 1px #000000;
 }
-@media screen and (min-width: 305px) and (max-width: 405px) {
-  .__item {
-    width: 100%;
-    overflow-x: hidden;
+@media screen and (min-width: 305px) and (max-width: 905px) {
+  .ticker-negative-change {
+    height: 50px;
+  }
+  .ticker-positive-change {
+    height: 50px;
+  }
+  .sector {
+    height: 50px;
+  }
+  .price-change {
+    height: 50px;
+  }
+  .ticker__item {
+    max-width: 400px;
+    height: 80px;
   }
 }
